# snakefmt

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
snakefmt/: __init__.py  exceptions.py  formatter.py
tests/: test_config.py  test_diff.py  test_formatter.py  test_grammar.py  test_parser.py  test_snakefmt.py
