[project]
name = "snakefmt"
version = "0.11.0"
description = "The uncompromising Snakemake code formatter"
authors = [
    { name = "Michael Hall", email = "michael@mbh.sh" },
    { name = "Brice Letcher", email = "bletcher@ebi.ac.uk" },
]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "python",
    "snakemake",
    "code",
    "formatter",
    "parser",
    "workflow",
    "management",
    "systems",
    "black",
]
dependencies = [
    "click>=8.2.0,<9",
    "black>=24.3.0,<25",
    "toml>=0.10.2,<0.11",
]

[project.urls]
Homepage = "https://github.com/snakemake/snakefmt"
Repository = "https://github.com/snakemake/snakefmt"
Documentation = "https://github.com/snakemake/snakefmt/blob/master/README.md"
"Snakemake Documentation" = "https://snakemake.readthedocs.io/"
"Snakemake Repository" = "https://github.com/snakemake/snakemake"

[project.scripts]
snakefmt = "snakefmt.snakefmt:main"

[dependency-groups]
dev = [
    "pytest>=7.4.4,<8",
    "pytest-cov>=4.1.0,<5",
    "ruff>=0.8.0,<1",
    "snakemake>=9.1.1",
    "pynvim~=0.4.3",
]

[tool.ruff]
# Same as Black.
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable a good set of rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
]

# Ignore rules that conflict with Black or are acceptable in this codebase
ignore = [
    "E203",  # whitespace before ':' (conflicts with Black)
    "E402",  # module level import not at top of file (acceptable for this codebase)
]

[tool.ruff.lint.isort]
# Configure isort to be compatible with Black
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
# Use the same style as Black
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


